[gd_scene load_steps=19 format=3 uid="uid://cow88ggfrlbxw"]

[ext_resource type="Script" path="res://scenes/game/gameobjects/amoeba.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://befpqtmum2fwb" path="res://models/amoeba/mdl-amoeba.tscn" id="2"]
[ext_resource type="PackedScene" path="res://scenes/game/item/item_deposit/item_deposit.tscn" id="5"]
[ext_resource type="PackedScene" path="res://scenes/game/characters/water_handler.tscn" id="6"]
[ext_resource type="PackedScene" uid="uid://c7qyybqvmlu5y" path="res://scenes/game/gameobjects/interactables/hint_object_interface.tscn" id="6_ynlu0"]
[ext_resource type="Resource" uid="uid://bfv04trnoslqs" path="res://scenes/game/item/items/slop_skull.tres" id="7"]
[ext_resource type="Script" path="res://scenes/game/ui_bar.gd" id="7_abvhb"]
[ext_resource type="Resource" uid="uid://o0eqj1gg7bn4" path="res://scenes/game/item/items/amoeba_slime.tres" id="8"]
[ext_resource type="Resource" uid="uid://y8rfvyq60b63" path="res://scenes/game/item/items/seeds/seed_mushroom.tres" id="9"]

[sub_resource type="Animation" id="13"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.75, 0.75, 0.75)]
}

[sub_resource type="Animation" id="14"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0.75, 0.75, 0.75), Vector3(0.65, 0.65, 0.65), Vector3(0.75, 0.75, 0.75)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f584r"]
_data = {
"RESET": SubResource("13"),
"idle": SubResource("14")
}

[sub_resource type="BoxShape3D" id="7"]
size = Vector3(2, 0.5, 2)

[sub_resource type="Animation" id="9"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HintObjectInterface/CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="10"]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HintObjectInterface/CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4sxfw"]
_data = {
"RESET": SubResource("9"),
"fade_in": SubResource("10")
}

[sub_resource type="BoxShape3D" id="11"]
size = Vector3(3, 1, 3)

[sub_resource type="BoxShape3D" id="12"]
size = Vector3(3, 1, 3)

[node name="Amoeba" type="RigidBody3D" node_paths=PackedStringArray("hydration_prog_bar", "bio_prog_bar", "anim_player")]
collision_layer = 2
script = ExtResource("1")
accepted_biomass_item_data = ExtResource("7")
dropped_seeds = Array[Resource("res://scenes/game/item/item_data.gd")]([ExtResource("9")])
slime_item_data = ExtResource("8")
hydration_prog_bar = NodePath("CanvasLayer/HintObjectInterface/HBoxContainer/VBoxContainer/StatBar2")
bio_prog_bar = NodePath("CanvasLayer/HintObjectInterface/HBoxContainer/VBoxContainer/StatBar")
anim_player = NodePath("CanvasLayer/HintObjectInterface/AnimationPlayer")

[node name="mdl-amoeba" parent="." instance=ExtResource("2")]
transform = Transform3D(0.75, 0, 0, 0, 0.75, 0, 0, 0, 0.75, 0, 7.45058e-09, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="mdl-amoeba"]
libraries = {
"": SubResource("AnimationLibrary_f584r")
}
autoplay = "idle"

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0)
shape = SubResource("7")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HintObjectInterface" parent="CanvasLayer" instance=ExtResource("6_ynlu0")]

[node name="CanvasModulate" parent="CanvasLayer/HintObjectInterface" index="0"]
color = Color(1, 1, 1, 0)

[node name="TitleLabel" parent="CanvasLayer/HintObjectInterface/HBoxContainer/VBoxContainer" index="0"]
text = "amoeba
give fertilizer and submerge to produce seeds"

[node name="StatBar" parent="CanvasLayer/HintObjectInterface/HBoxContainer/VBoxContainer" index="1"]
visible = true

[node name="Label" parent="CanvasLayer/HintObjectInterface/HBoxContainer/VBoxContainer/StatBar" index="0"]
text = "fertilizer"

[node name="StatBar2" type="ProgressBar" parent="CanvasLayer/HintObjectInterface/HBoxContainer/VBoxContainer" index="2"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_vertical = 4
value = 50.0
show_percentage = false
script = ExtResource("7_abvhb")

[node name="Label" type="Label" parent="CanvasLayer/HintObjectInterface/HBoxContainer/VBoxContainer/StatBar2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "moisture"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/HintObjectInterface"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_4sxfw")
}

[node name="WaterHandler" parent="." instance=ExtResource("6")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="WaterHandler"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.242583, 0)
shape = SubResource("11")

[node name="HydrationTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="ItemDeposit" parent="." instance=ExtResource("5")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="ItemDeposit"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.251371, 0)
shape = SubResource("12")

[node name="Timer" type="Timer" parent="."]
wait_time = 240.0
one_shot = true
autostart = true

[connection signal="submerged_status_changed" from="WaterHandler" to="." method="_on_WaterHandler_submerged_status_changed"]
[connection signal="timeout" from="HydrationTimer" to="." method="_on_HydrationTimer_timeout"]
[connection signal="body_entered" from="ItemDeposit" to="." method="_on_ItemDeposit_body_entered"]
[connection signal="timeout" from="Timer" to="." method="queue_free"]

[editable path="CanvasLayer/HintObjectInterface"]
